--- a/index.html
+++ b/index.html
@@ -16,7 +16,27 @@
         </div>
     </div>
     
-    
+    <!--HEADER-->
+    <header class="header">
+        <div class="wrapper">
+
+            <div class="search-box">
+                <i class="fas fa-search"></i>
+                <input type="search" class="search" placeholder="Type here to search">
+            </div>
+
+            <div class="logo-container">
+                <a href="index.html" class="logo"><img src="images/logo.svg" alt="Shop At Anna Logo"></a>
+            </div>
+
+            <div class="bag-area">
+                <a href="#" class="bag-area--text account">account <i class="far fa-user"></i></a>
+                <a href="#" class="bag-area--text bag">your bag <i class="fas fa-shopping-bag"></i></a>
+            </div>
+
+        </div>
+    </header>
+
 <script src="js/index.js"></script>
 </body>
 </html>
