--- a/index.html
+++ b/index.html
@@ -37,6 +37,24 @@
         </div>
     </header>
 
+    <!--NAVIGATION-->
+    <nav class="nav">
+        <div class="wrapper">
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">what's new</a></li>
+                <li><a href="#">clothing</a></li>
+                <li><a href="#">accessories</a></li>
+                <li><a href="#">shoes</a></li>
+                <li><a href="#">designers</a></li>
+                <li><a href="#">vip</a></li>
+                <li><a href="#">stores</a></li>
+                <li><a href="#">blog</a></li>
+                <li><a href="#">sale</a></li>
+            </ul>
+        </div>
+    </nav>
+
 <script src="js/index.js"></script>
 </body>
 </html>
