--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <div class="search-box">
                 <i class="fas fa-search"></i>
-                <input type="search" class="search" placeholder="Type here to search">
+                <input type="text" class="search" placeholder="Type here to search">
             </div>
 
             <div class="logo-container">
@@ -55,6 +55,50 @@
         </div>
     </nav>
 
+    <!--HERO-->
+    <div class="hero">
+        <div class="wrapper">
+            <div class="slider__container">
+
+                <div class="slide active">
+                    <div class="slide__content">
+                        <p class="top">new season</p>
+                        <h1 class="title">Essentiel Antwerp</h1>
+                        <p class="text">Bringing fun into fashion through a mix of prints, colours and fabrics at affordable prices. Embark on a new adventure with each item.</p>
+                        <a href="#" class="cta">read more</a>
+                    </div>
+                    <div class="slide__img">
+                        <img src="images/heroimg1.png" alt="Shop at anna slider img 1" class="parallax-img">
+                    </div>
+                </div>
+
+                <div class="slide active">
+                    <div class="slide__content">
+                        <p class="top">the edit</p>
+                        <h1 class="title">prominent prints</h1>
+                        <p class="text">This season's trendiest print styles</p>
+                        <a href="#" class="cta">shop now</a>
+                    </div>
+                    <div class="slide__img">
+                        <img src="images/heroimg2.png" alt="Shop at anna slider img 1" class="parallax-img">
+                    </div>
+                </div>
+
+                <div class="slide active">
+                    <div class="slide__content">
+                        <p class="top">blog post</p>
+                        <h1 class="title">rainy day chic</h1>
+                        <p class="text">In need of some rainy day fashion inspiration? We've got you covered...</p>
+                        <a href="#" class="cta">read now</a>
+                    </div>
+                    <div class="slide__img">
+                        <img src="images/heroimg3.png" alt="Shop at anna slider img 1" class="parallax-img">
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 <script src="js/index.js"></script>
 </body>
 </html>
