--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 
     <!--HERO-->
-    <div class="hero">
+    <section class="hero">
         <div class="wrapper">
             <div class="slider__container">
 
@@ -98,7 +98,48 @@
 
             </div>
         </div>
-    </div>
+    </section>
+
+    <!--SELECTED-->
+    <section class="selected">
+        <div class="wrapper">
+            <div class="grid">
+
+                <div class="grid__item grid__item--1">
+                    <div class="selected__content">
+                        <h3 class="selected--heading">SELECTED FEMME</h3>
+                        <p class="selected--text">Bringing Scandinavian chic to the everyday, Selected Femme’s new capsule features classic staples that’ll be on constant wardrobe rotation</p>
+                        <a href="#" class="cta--empty">shop now</a>
+                    </div>
+                    <div class="selected__img">
+                        <img src="images/selected-image-1.jpg" alt="shop at anna">
+                    </div>
+                </div>
+
+                <div class="grid__item grid__item--2">
+                    <div class="selected__content">
+                        <h3 class="selected--heading">ganni</h3>
+                        <p class="selected--text">Copenhagen-based label GANNI encompasses the carefree spirit of Scandinavian dressing. Now available in our Bury St Edmunds, Burnham Market and Woodbridge stores.</p>
+                        <a href="#" class="cta--empty">browse online</a>
+                    </div>
+                    <div class="selected__img">
+                        <img src="images/selected-image-2.jpg" alt="shop at anna">
+                    </div>
+                </div>
+
+                <div class="grid__item grid__item--3">
+                    <div class="selected__content">
+                        <h3 class="selected--heading">AUTUMNAL HUES</h3>
+                        <p class="selected--text">Perfect autumn transitional pieces to add to your wardrobe.</p>
+                        <a href="#" class="cta--empty">shop now</a>
+                    </div>
+                    <div class="selected__img">
+                        <img src="images/selected-image-3.jpg" alt="shop at anna">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 <script src="js/index.js"></script>
 </body>
 </html>
