finished info bar

--- a/index.html
+++ b/index.html
@@ -140,6 +140,26 @@
             </div>
         </div>
     </section>
+
+    <!--INFO BAR-->
+    <section class="info-bar">
+        <div class="wrapper">
+            <div class="info-bar__item">
+                <i class="fas fa-paper-plane"></i>
+                <p>We ship worldwide</p>
+            </div>
+
+            <div class="info-bar__item">
+                <i class="fas fa-lock"></i>
+                <p>Safe, fast & secure <br> payment gateways</p>
+            </div>
+
+            <div class="info-bar__item">
+                <i class="fas fa-mobile-alt"></i>
+                <p>Call for styling advice on <br> +44 (0)20 7483 0411</p>
+            </div>
+        </div>
+    </section>
 <script src="js/index.js"></script>
 </body>
 </html>
