finished hero grid section

--- a/index.html
+++ b/index.html
@@ -160,6 +160,162 @@
             </div>
         </div>
     </section>
+
+    <!--NEW IN SHOP-->
+    <section class="new-in-shop">
+        <div class="wrapper">
+            <h2>new in</h2>
+            <a href="#" class="cta--empty">shop now</a>
+            <button class="button button--left" id="newInShopBtnLeft"><i class="fas fa-arrow-left"></i></button>
+            <button class="button button--right" id="newInShopBtnRight"><i class="fas fa-arrow-right"></i></button>
+            <div class="grid">
+
+                <div class="grid__item grid__item--1 shop-product">
+                    <a href="#" class="product">
+                        <div class="product__image">
+                            <img src="images/product-1.jpg" alt="shop at anna">
+                            <span class="custom-tag">new season</span>
+                        </div>
+                        <div class="product__content">
+                            <h6 class="vendor">loreak</h6>
+                            <a href="#" class="cta--product">LOR Lan Trousers in Camel</a>
+                            <p class="price">129.00</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid__item grid__item--2 shop-product">
+                    <a href="#" class="product">
+                        <div class="product__image">
+                            <img src="images/product-2.jpg" alt="shop at anna">
+                            <span class="custom-tag">new season</span>
+                        </div>
+                        <div class="product__content">
+                            <h6 class="vendor">jumper 1234</h6>
+                            <a href="#" class="cta--product">JU Las Vegas Sweat in Grey Melange</a>
+                            <p class="price">95.00</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid__item grid__item--3 shop-product">
+                    <a href="#" class="product">
+                        <div class="product__image">
+                            <img src="images/product-3.jpg" alt="shop at anna">
+                            <span class="custom-tag">new season</span>
+                        </div>
+                        <div class="product__content">
+                            <h6 class="vendor">j brand</h6>
+                            <a href="#" class="cta--product">JB Alma High Rise Straight Jeans in Impulse</a>
+                            <p class="price">255.00</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid__item grid__item--4 shop-product">
+                    <a href="#" class="product">
+                        <div class="product__image">
+                            <img src="images/product-4.jpg" alt="shop at anna">
+                            <span class="custom-tag">new season</span>
+                        </div>
+                        <div class="product__content">
+                            <h6 class="vendor">bellerose</h6>
+                            <a href="#" class="cta--product">BR Solong Printed Top</a>
+                            <p class="price">139.00</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid__item grid__item--5 shop-product">
+                    <a href="#" class="product">
+                        <div class="product__image">
+                            <img src="images/product-5.jpg" alt="shop at anna">
+                            <span class="custom-tag">new season</span>
+                        </div>
+                        <div class="product__content">
+                            <h6 class="vendor">selected femme</h6>
+                            <a href="#" class="cta--product">SLF Miranda Dress in Denim</a>
+                            <p class="price">89.00</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid__item grid__item--6 shop-product">
+                    <a href="#" class="product">
+                        <div class="product__image">
+                            <img src="images/product-6.jpg" alt="shop at anna">
+                            <span class="custom-tag">new season</span>
+                        </div>
+                        <div class="product__content">
+                            <h6 class="vendor">DL1961 Premium Denim</h6>
+                            <a href="#" class="cta--product">DL Florence Jeans in Medina</a>
+                            <p class="price">215.00</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid__item grid__item--7 shop-product">
+                    <a href="#" class="product">
+                        <div class="product__image">
+                            <img src="images/product-7.jpg" alt="shop at anna">
+                            <span class="custom-tag">new season</span>
+                        </div>
+                        <div class="product__content">
+                            <h6 class="vendor">Isabel Marant Etoile</h6>
+                            <a href="#" class="cta--product">IM Catchelae Shirt in Black</a>
+                            <p class="price">315.00</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid__item grid__item--8 shop-product">
+                    <a href="#" class="product">
+                        <div class="product__image">
+                            <img src="images/product-8.jpg" alt="shop at anna">
+                            <span class="custom-tag">new season</span>
+                        </div>
+                        <div class="product__content">
+                            <h6 class="vendor">loreak</h6>
+                            <a href="#" class="cta--product">LOR Isla Knit in Brindle</a>
+                            <p class="price">119.00</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--HOME SECTION GRID-->
+    <div class="home-section-grid">
+        <div class="wrapper">
+
+            <div class="grid">
+
+                <div class="grid__item grid__item--1">
+                    <img src="images/section-img-1.jpg" alt="">
+                </div>
+
+                <div class="grid__item grid__item--2">
+                    <h3>primrose park</h3>
+                    <p class="text">Vibrant colours and exciting prints with flattering silhouettes to bring some brightness into your wardrobe</p>
+                    <a href="#" class="cta">shop now</a>
+                </div>
+
+            </div>
+
+            <div class="grid">
+                <div class="grid__item grid__item--1">
+                    <img src="images/section-img-2.jpg" alt="">
+                </div>
+
+                <div class="grid__item grid__item--2">
+                    <h3>Weekend MaxMara</h3>
+                    <p class="text">Effortless everyday essentials and timeless pieces to last you from season to season</p>
+                    <a href="#" class="cta">shop now</a>
+                </div>
+            </div>
+        </div>
+    </div>
 <script src="js/index.js"></script>
 </body>
 </html>
