finished annas picks

--- a/index.html
+++ b/index.html
@@ -316,6 +316,130 @@
             </div>
         </div>
     </div>
+
+    <!--ANNAS PICKS-->
+    <section class="new-in-shop">
+        <div class="wrapper">
+            <h2>anna's picks</h2>
+            <a href="#" class="cta--empty">shop now</a>
+            <button class="button button--left" id="pickBtnLeft"><i class="fas fa-arrow-left"></i></button>
+            <button class="button button--right" id="pickBtnRight"><i class="fas fa-arrow-right"></i></button>
+            <div class="grid">
+
+                <div class="grid__item grid__item--1 shop-product">
+                    <a href="#" class="product">
+                        <div class="product__image">
+                            <img src="images/annaspick1.jpg" alt="shop at anna">
+                            <span class="custom-tag">new season</span>
+                        </div>
+                        <div class="product__content">
+                            <h6 class="vendor">joseph</h6>
+                            <a href="#" class="cta--product">JOSEPH Taffy trousers in ganache</a>
+                            <p class="price">345.00</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid__item grid__item--2 shop-product">
+                    <a href="#" class="product">
+                        <div class="product__image">
+                            <img src="images/annaspick2.jpg" alt="shop at anna">
+                            <span class="custom-tag">new season</span>
+                        </div>
+                        <div class="product__content">
+                            <h6 class="vendor">golden goose deluxe brand</h6>
+                            <a href="#" class="cta--product">GG Ania golden rainbow in black</a>
+                            <p class="price">125.00</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid__item grid__item--3 shop-product">
+                    <a href="#" class="product">
+                        <div class="product__image">
+                            <img src="images/annaspick3.jpg" alt="shop at anna">
+                            <span class="custom-tag">new season</span>
+                        </div>
+                        <div class="product__content">
+                            <h6 class="vendor">rag &amp; bone</h6>
+                            <a href="#" class="cta--product">R&amp;B Luna jumpsuit in dusk lavander</a>
+                            <p class="price">449.00</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid__item grid__item--4 shop-product">
+                    <a href="#" class="product">
+                        <div class="product__image">
+                            <img src="images/annaspick4.jpg" alt="shop at anna">
+                            <span class="custom-tag">new season</span>
+                        </div>
+                        <div class="product__content">
+                            <h6 class="vendor">bellerose</h6>
+                            <a href="#" class="cta--product">BR Dattor knit instripe</a>
+                            <p class="price">149.00</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid__item grid__item--5 shop-product">
+                    <a href="#" class="product">
+                        <div class="product__image">
+                            <img src="images/annaspick5.jpg" alt="shop at anna">
+                            <span class="custom-tag">sold out</span>
+                        </div>
+                        <div class="product__content">
+                            <h6 class="vendor">second femmale</h6>
+                            <a href="#" class="cta--product">SEC.F Sandra dress in marmalade</a>
+                            <p class="price">135.00</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid__item grid__item--6 shop-product">
+                    <a href="#" class="product">
+                        <div class="product__image">
+                            <img src="images/annaspick6.jpg" alt="shop at anna">
+                            <span class="custom-tag">new season</span>
+                        </div>
+                        <div class="product__content">
+                            <h6 class="vendor">rosemunde</h6>
+                            <a href="#" class="cta--product">ROSEMUNDE Benita wide lace in soft powder</a>
+                            <p class="price">55.00</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid__item grid__item--7 shop-product">
+                    <a href="#" class="product">
+                        <div class="product__image">
+                            <img src="images/annaspick7.jpg" alt="shop at anna">
+                            <span class="custom-tag">new season</span>
+                        </div>
+                        <div class="product__content">
+                            <h6 class="vendor">Isabel Marant Etoile</h6>
+                            <a href="#" class="cta--product">IM Liliana in top black</a>
+                            <p class="price">315.00</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="grid__item grid__item--8 shop-product">
+                    <a href="#" class="product">
+                        <div class="product__image">
+                            <img src="images/annaspick8.jpg" alt="shop at anna">
+                            <span class="custom-tag">new season</span>
+                        </div>
+                        <div class="product__content">
+                            <h6 class="vendor">golden goose deluxe brand</h6>
+                            <a href="#" class="cta--product">GG Adele skirt in check</a>
+                            <p class="price">389.00</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 <script src="js/index.js"></script>
 </body>
 </html>
