--- a/index.html
+++ b/index.html
@@ -440,6 +440,44 @@
             </div>
         </div>
     </section>
+
+    <!--ARTICLES-->
+    <section class="articles">
+        <div class="wrapper">
+            <div class="grid">
+                <div class="grid__item grid__item--1">
+                    <div class="grid__item__img">
+                        <img src="images/home-grid-1.jpg" alt="">
+                    </div>
+                    <div class="grid__item__content">
+                        <p class="date">October 13, 2020</p>
+                        <h5>Rainy Day Chic</h5>
+                        <a href="#" class="cta--empty">read article</a>
+                    </div>
+                </div>
+                <div class="grid__item grid__item--2">
+                    <div class="grid__item__content">
+                        <p class="date">October 10, 2020</p>
+                        <h5>Luxe Loungewear</h5>
+                        <a href="#" class="cta--empty">read article</a>
+                    </div>
+                    <div class="grid__item__img">
+                        <img src="images/home-grid-2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="grid__item grid__item--3">
+                    <div class="grid__item__img">
+                        <img src="images/home-grid-3.jpg" alt="">
+                    </div>
+                    <div class="grid__item__content">
+                        <p class="date">september 23, 2020</p>
+                        <h5>everyday AW20 Trends</h5>
+                        <a href="#" class="cta--empty">read article</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 <script src="js/index.js"></script>
 </body>
 </html>
