--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                         <p class="text">Bringing fun into fashion through a mix of prints, colours and fabrics at affordable prices. Embark on a new adventure with each item.</p>
                         <a href="#" class="cta">read more</a>
                     </div>
-                    <div class="slide__img">
-                        <img src="images/heroimg1.png" alt="Shop at anna slider img 1" class="parallax-img">
+                    <div class="slide__img parallax-parent">
+                        <img src="images/heroimg1.png" alt="Shop at anna slider img 1" class="parallax-child">
                     </div>
                 </div>
 
@@ -79,8 +79,8 @@
                         <p class="text">This season's trendiest print styles</p>
                         <a href="#" class="cta">shop now</a>
                     </div>
-                    <div class="slide__img">
-                        <img src="images/heroimg2.png" alt="Shop at anna slider img 1" class="parallax-img">
+                    <div class="slide__img parallax-parent">
+                        <img src="images/heroimg2.png" alt="Shop at anna slider img 1" class="parallax-child">
                     </div>
                 </div>
 
@@ -91,8 +91,8 @@
                         <p class="text">In need of some rainy day fashion inspiration? We've got you covered...</p>
                         <a href="#" class="cta">read now</a>
                     </div>
-                    <div class="slide__img">
-                        <img src="images/heroimg3.png" alt="Shop at anna slider img 1" class="parallax-img">
+                    <div class="slide__img parallax-parent">
+                        <img src="images/heroimg3.png" alt="Shop at anna slider img 1" class="parallax-child">
                     </div>
                 </div>
 
@@ -111,8 +111,8 @@
                         <p class="selected--text">Bringing Scandinavian chic to the everyday, Selected Femme’s new capsule features classic staples that’ll be on constant wardrobe rotation</p>
                         <a href="#" class="cta--empty">shop now</a>
                     </div>
-                    <div class="selected__img">
-                        <img src="images/selected-image-1.jpg" alt="shop at anna">
+                    <div class="selected__img parallax-parent">
+                        <img src="images/selected-image-1.jpg" alt="shop at anna" class="parallax-child">
                     </div>
                 </div>
 
@@ -122,8 +122,8 @@
                         <p class="selected--text">Copenhagen-based label GANNI encompasses the carefree spirit of Scandinavian dressing. Now available in our Bury St Edmunds, Burnham Market and Woodbridge stores.</p>
                         <a href="#" class="cta--empty">browse online</a>
                     </div>
-                    <div class="selected__img">
-                        <img src="images/selected-image-2.jpg" alt="shop at anna">
+                    <div class="selected__img parallax-parent">
+                        <img src="images/selected-image-2.jpg" alt="shop at anna" class="parallax-child">
                     </div>
                 </div>
 
@@ -133,8 +133,8 @@
                         <p class="selected--text">Perfect autumn transitional pieces to add to your wardrobe.</p>
                         <a href="#" class="cta--empty">shop now</a>
                     </div>
-                    <div class="selected__img">
-                        <img src="images/selected-image-3.jpg" alt="shop at anna">
+                    <div class="selected__img parallax-parent">
+                        <img src="images/selected-image-3.jpg" alt="shop at anna" class="parallax-child">
                     </div>
                 </div>
             </div>
@@ -478,6 +478,57 @@
             </div>
         </div>
     </section>
+
+    <!--FOOTER-->
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="footer__top">
+                <form action="#" class="form">
+                    <h3>keep in touch</h3>
+                    <p class="footer--text">News &amp; updates from Anna Store. No spam we promise.</p>
+
+                    <div class="input__container">
+                        <input type="email" placeholder="Email here">
+                        <button type="submit" class="submit">sign up <i class="fas fa-arrow-right"></i></button>
+                    </div>
+                </form>
+                <div class="footer__links">
+                    <ul>
+                        <li><a href="#">ordering &amp; payment</a></li>
+                        <li><a href="#">terms &amp; conditions</a></li>
+                        <li><a href="#">returns &amp; exchanges</a></li>
+                        <li><a href="#">delivery</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#">about anna</a></li>
+                        <li><a href="#">stores &amp; hours</a></li>
+                        <li><a href="#">jobs @ anna</a></li>
+                        <li><a href="#">contact us</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="https://facebook.com">facebook</a></li>
+                        <li><a href="https://instagram.com">instagram</a></li>
+                        <li><a href="https://pinterest.com">pinterest</a></li>
+                        <li><a href="https://twitter.com">twitter</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__bottom">
+                <p class="footer--text">Website by Adnan Musinovic. Copyright Anna Park Limited.</p>
+                <ul>
+                    <li><img src="images/amex.svg" alt=""></li>
+                    <li><img src="images/ipay.svg" alt=""></li>
+                    <li><img src="images/gpay.svg" alt=""></li>
+                    <li><img src="images/klarna.svg" alt=""></li>
+                    <li><img src="images/maestro.svg" alt=""></li>
+                    <li><img src="images/master.svg" alt=""></li>
+                    <li><img src="images/paypal.svg" alt=""></li>
+                    <li><img src="images/opay.svg" alt=""></li>
+                    <li><img src="images/visa.svg" alt=""></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 <script src="js/index.js"></script>
 </body>
 </html>
